--- a/Jogos/Lazerunner/LazeRunner_backup.html
+++ b/Jogos/Lazerunner/LazeRunner_backup.html
@@ -326,12 +326,23 @@
       ' ': false, Enter: false
     };
     let rankings = JSON.parse(localStorage.getItem('rankings')) || [];
+    let animationFrameId = null;
 
     let joystickActive = false;
     let joystickCenter = { x: 0, y: 0 };
     let joystickDirection = { x: 0, y: 0 };
     const joystickRadius = 60;
     const isTouchDevice = 'ontouchstart' in window || navigator.maxTouchPoints > 0;
+
+    // Difficulty levels
+    const difficultyLevels = [
+      { minScore: 0, maxScore: 10, barsToSpawn: 2, spawnInterval: 240 }, // 4 seconds
+      { minScore: 11, maxScore: 25, barsToSpawn: 2, spawnInterval: 150 }, // 2.5 seconds
+      { minScore: 26, maxScore: 40, barsToSpawn: 3, spawnInterval: 228 }, // 3.8 seconds
+      { minScore: 41, maxScore: 99, barsToSpawn: 3, spawnInterval: 210 }, // 3.5 seconds
+      { minScore: 100, maxScore: Infinity, barsToSpawn: 4, spawnInterval: 240 } // 4 seconds
+    ];
+    let currentDifficulty = difficultyLevels[0];
 
     function setupJoystick() {
       if (!isTouchDevice) return;
@@ -407,10 +418,10 @@
       gameOverRankingList.innerHTML = '';
       rankings.sort((a,b)=>b.score-a.score).slice(0,10).forEach(e => {
         const li1 = document.createElement('li');
-        li1.textContent = `${e.name} - ${e.score}`;
+        li1.textContent = `${e.name} - ${Number(e.score).toFixed(2)}`;
         startRankingList.appendChild(li1);
         const li2 = document.createElement('li');
-        li2.textContent = `${e.name} - ${e.score}`;
+        li2.textContent = `${e.name} - ${Number(e.score).toFixed(2)}`;
         gameOverRankingList.appendChild(li2);
       });
     }
@@ -421,7 +432,10 @@
         if (e.key === ' ' && !player.immune && player.energy >= 10) {
           player.immune = true;
         }
-        if (e.key === 'Enter' && gameOver) resetGame();
+        if (e.key === 'Enter' && gameOver) {
+          console.log('Enter pressed, triggering resetGame');
+          resetGame();
+        }
       }
     });
 
@@ -435,12 +449,14 @@
     });
 
     playButton.addEventListener('click', () => {
+      console.log('Play button clicked, resetting score and starting game');
       startScreen.classList.add('hidden');
       gameStarted = true;
       resetGame();
     });
 
     restartButton.addEventListener('click', () => {
+      console.log('Restart button clicked, triggering resetGame');
       gameOverScreen.classList.add('hidden');
       resetGame();
     });
@@ -462,6 +478,12 @@
     });
 
     function resetGame() {
+      if (animationFrameId) {
+        cancelAnimationFrame(animationFrameId);
+        animationFrameId = null;
+        console.log('Cancelled animation frame');
+      }
+
       player.x = canvas.width / 2;
       player.y = canvas.height / 2;
       player.immune = false;
@@ -469,14 +491,18 @@
       score = 0;
       bars = [];
       gameOver = false;
+      gameStarted = true;
       scoreSaved = false;
       saveRankingButton.disabled = false;
       saveRankingButton.textContent = 'Salvar no ranking';
-      lastFrameTime = lastBarTime = 0;
+      lastFrameTime = 0;
+      lastBarTime = 0;
+      currentDifficulty = difficultyLevels[0]; // Reset to initial difficulty
       gameOverScreen.classList.add('hidden');
       updateSkinSelectors();
       updateRanking();
-      requestAnimationFrame(gameLoop);
+      console.log('Game reset, score:', score, 'gameStarted:', gameStarted, 'gameOver:', gameOver);
+      animationFrameId = requestAnimationFrame(gameLoop);
     }
 
     function createBar() {
@@ -486,12 +512,14 @@
       const speed = 2 + Math.random()*1.8;
       let bar;
       switch(dir) {
-        case 0: bar = { x:-thickness, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:speed, dy:0 }; break;
-        case 1: bar = { x:canvas.width, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:-speed, dy:0 }; break;
-        case 2: bar = { x:Math.random()*(canvas.width-length), y:-thickness, width:length, height:thickness, dx:0, dy:speed }; break;
-        case 3: bar = { x:Math.random()*(canvas.width-length), y:canvas.height, width:length, height:thickness, dx:0, dy:-speed }; break;
+        case 0: bar = { x:-thickness, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:speed, dy:0, scored: false }; break;
+        case 1: bar = { x:canvas.width, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:-speed, dy:0, scored: false }; break;
+        case 2: bar = { x:Math.random()*(canvas.width-length), y:-thickness, width:length, height:thickness, dx:0, dy:speed, scored: false }; break;
+        case 3: bar = { x:Math.random()*(canvas.width-length), y:canvas.height, width:length, height:thickness, dx:0, dy:-speed, scored: false }; break;
       }
       bars.push(bar);
+      score += 1;
+      console.log('Bar created, score:', score, 'difficulty:', currentDifficulty);
     }
 
     function movePlayer(dt) {
@@ -521,12 +549,18 @@
     }
 
     function checkCollisions() {
-      if (player.immune) return;
       for (const b of bars) {
         if (player.x + player.radius > b.x && player.x - player.radius < b.x + b.width &&
             player.y + player.radius > b.y && player.y - player.radius < b.y + b.height) {
-          gameOver = true;
-          break;
+          if (player.immune && !b.scored) {
+            score += 1;
+            b.scored = true;
+            console.log('Immune collision, score:', score);
+          } else if (!player.immune) {
+            gameOver = true;
+            console.log('Collision detected, game over, score:', score);
+            break;
+          }
         }
       }
     }
@@ -585,7 +619,7 @@
       ctx.fillStyle = 'white';
       ctx.font = '24px Arial';
       ctx.textAlign = 'center';
-      ctx.fillText('Score: ' + Number(score.toFixed(2)), canvas.width / 2, 40);
+      ctx.fillText('Score: ' + score, canvas.width / 2, 40);
       ctx.textAlign = 'left';
     }
 
@@ -612,13 +646,27 @@
     function gameLoop(timestamp=0) {
       if (!gameStarted || gameOver) {
         if (gameOver) {
-          finalScoreText.textContent = `Sua pontuação: ${Number(score.toFixed(2))}`;
+          finalScoreText.textContent = `Sua pontuação: ${score.toFixed(2)}`;
           gameOverScreen.classList.remove('hidden');
+          console.log('Game over screen shown, score:', score);
+          if (animationFrameId) {
+            cancelAnimationFrame(animationFrameId);
+            animationFrameId = null;
+            console.log('Game over, animation frame cancelled');
+          }
         }
         return;
       }
+
       const dt = (timestamp - lastFrameTime) / 16.666;
       lastFrameTime = timestamp;
+
+      // Update difficulty based on score
+      const newDifficulty = difficultyLevels.find(level => score >= level.minScore && score <= level.maxScore);
+      if (newDifficulty !== currentDifficulty) {
+        currentDifficulty = newDifficulty;
+        console.log('Difficulty changed:', currentDifficulty);
+      }
 
       clearScreen();
       drawBoundary();
@@ -628,9 +676,12 @@
       updateEnergy(dt);
 
       lastBarTime += dt;
-      if (lastBarTime > 120) {
-        createBar();
+      if (lastBarTime > currentDifficulty.spawnInterval) {
+        for (let i = 0; i < currentDifficulty.barsToSpawn; i++) {
+          createBar();
+        }
         lastBarTime = 0;
+        console.log('Spawned', currentDifficulty.barsToSpawn, 'bars, score:', score);
       }
 
       bars = bars.filter(b =>
@@ -643,10 +694,9 @@
       drawScore();
       drawImmunityBar();
 
-      score += dt * 0.16667;
-      score = Number(score.toFixed(2));
+      console.log('Score:', score);
 
-      requestAnimationFrame(gameLoop);
+      animationFrameId = requestAnimationFrame(gameLoop);
     }
 
     function updateSkinSelectors() {
@@ -667,6 +717,7 @@
           player.skin = option.dataset.skin;
           selectSkin(player.skin, startSkinOptions);
           selectSkin(player.skin, gameOverSkinOptions);
+          console.log('Skin selected (start):', player.skin);
         });
       });
 
@@ -675,6 +726,7 @@
           player.skin = option.dataset.skin;
           selectSkin(player.skin, startSkinOptions);
           selectSkin(player.skin, gameOverSkinOptions);
+          console.log('Skin selected (game over):', player.skin);
         });
       });
 
@@ -696,6 +748,7 @@
       updateRanking();
       updateSkinSelectors();
       setupJoystick();
+      console.log('Game loaded, initial score:', score);
     });
   </script>
 </body>
